--- a/inject-groovy-test/build.gradle
+++ b/inject-groovy-test/build.gradle
@@ -7,7 +7,7 @@ dependencies {
 
     api project(":inject-groovy")
     api libs.managed.groovy
-    api(libs.managed.spock) {
+    api(libs.spock) {
         exclude module:'groovy-all'
     }
     api project(":context")
