--- a/inject-groovy/build.gradle
+++ b/inject-groovy/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 //    testImplementation 'javax.validation:validation-api:1.1.0.Final'
     testImplementation project(":context")
     testImplementation libs.javax.inject
-    testImplementation libs.managed.spotbugs
+    testImplementation libs.spotbugs
     testImplementation libs.hibernate
     testImplementation libs.hibernate.validator
     testRuntimeOnly libs.javax.el.impl
@@ -26,14 +26,10 @@ dependencies {
     testImplementation project(":inject-test-utils")
     testImplementation project(":inject-groovy-test")
     testImplementation project(":validation")
-    testImplementation(libs.managed.neo4j.bolt) {
-        version {
-            require "1.4.5"
-        }
-    }
+    testImplementation(libs.neo4j.bolt)
     testImplementation libs.managed.groovy.json
     testImplementation libs.blaze.persistence.core
-    testImplementation libs.managed.snakeyaml
+    testImplementation libs.snakeyaml
     testImplementation libs.managed.reactor
 
     functionalTestImplementation(testFixtures(project(":test-suite")))
