--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -12,8 +12,8 @@ repositories {
 
 // Include any of our boms that hava required properties
 dependencies {
-    bomVersions(libs.boms.micronaut.grpc)
-    bomVersions(libs.boms.micronaut.picocli)
+    bomVersions(libs.internal.boms.micronaut.grpc)
+    bomVersions(libs.internal.boms.micronaut.picocli)
 }
 
 def micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
