--- a/http-client/build.gradle
+++ b/http-client/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     testImplementation project(":jackson-databind")
     testImplementation project(":http-server-netty")
     testImplementation libs.wiremock
-    testImplementation libs.managed.logback
+    testImplementation libs.logback
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
