--- a/inject-test-utils/build.gradle
+++ b/inject-test-utils/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 dependencies {
     api libs.managed.groovy
-    api(libs.managed.spock) {
+    api(libs.spock) {
         exclude module:'groovy-all'
     }
     api project(":core-processor")
