--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     // Adding these for now since micronaut-test isnt resolving correctly ... probably need to upgrade gradle there too
     testImplementation libs.junit.jupiter.api
 
-    testImplementation libs.managed.jcache
-    testImplementation(platform(libs.boms.micronaut.tracing))
+    testImplementation libs.jcache
+    testImplementation(platform(libs.test.boms.micronaut.tracing))
     testImplementation(libs.micronaut.tracing.jaeger) {
         exclude module: 'micronaut-bom'
         exclude module: 'micronaut-http-client'
@@ -64,10 +64,10 @@ dependencies {
     testAnnotationProcessor project(":inject-java")
     testAnnotationProcessor project(":test-suite")
 
-    testRuntimeOnly(platform(libs.boms.micronaut.aws))
-    testRuntimeOnly libs.managed.h2
+    testRuntimeOnly(platform(libs.test.boms.micronaut.aws))
+    testRuntimeOnly libs.h2
     testRuntimeOnly libs.junit.vintage
-    testRuntimeOnly libs.managed.logback
+    testRuntimeOnly libs.logback
     testRuntimeOnly libs.aws.java.sdk.lambda
 
     // needed for HTTP/2 tests
@@ -80,7 +80,7 @@ dependencies {
         }
     }
     testImplementation libs.logbook.netty
-    testImplementation libs.managed.logback
+    testImplementation libs.logback
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
@@ -88,7 +88,7 @@ dependencies {
 
     testImplementation libs.managed.reactor
 
-    testFixturesApi libs.managed.spock
+    testFixturesApi libs.spock
     testFixturesApi libs.managed.groovy
     testFixturesApi libs.jetbrains.annotations
 }
