Rename `bom` -> `core-bom`
This is a breaking change: it renames the `bom` project to `core-bom`.
The new BOM will live in a separate project (`micronaut-bom`) under
different GAV coordinates.

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,7 @@ plugins {
 rootProject.name = 'micronaut'
 
 include "aop"
-include "bom"
+include "core-bom"
 include "parent"
 include "buffer-netty"
 include "core"
