--- a/inject-java/build.gradle
+++ b/inject-java/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testImplementation libs.managed.spotbugs
     testImplementation libs.hibernate
     testImplementation libs.compile.testing
+    testImplementation libs.rxjava3
     testImplementation(libs.managed.neo4j.bolt) {
         version {
             require "1.4.5"
