--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,7 +80,7 @@ managed-micronaut-crac = "1.0.1"
 managed-micronaut-data = "3.8.1"
 managed-micronaut-discovery = "3.2.0"
 managed-micronaut-elasticsearch = "4.3.0"
-managed-micronaut-email = "1.4.0"
+managed-micronaut-email = "2.0.0-SNAPSHOT"
 managed-micronaut-flyway = "5.4.1"
 managed-micronaut-gcp = "4.6.0"
 managed-micronaut-graphql = "3.2.0"
@@ -116,7 +116,7 @@ managed-micronaut-rss = "3.2.0"
 managed-micronaut-rxjava1 = "1.0.0"
 managed-micronaut-rxjava2 = "2.0.0-SNAPSHOT"
 managed-micronaut-rxjava3 = "3.0.0-SNAPSHOT"
-managed-micronaut-security = "3.8.1"
+managed-micronaut-security = "4.0.0-SNAPSHOT"
 managed-micronaut-serialization = "2.0.0-SNAPSHOT"
 managed-micronaut-servlet = "3.3.2"
 managed-micronaut-spring = "4.3.1"
