--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,7 +12,7 @@ micronautBuild {
 }
 
 dependencies {
-    compileOnly libs.managed.jsr305
+    compileOnly libs.managed.jakarta.annotation.api
     compileOnly libs.managed.graal
     compileOnly libs.kotlin.stdlib
 }
