Update Neo4j to a snapshot now it's building for 4.0.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -100,7 +100,7 @@ managed-micronaut-liquibase = "5.4.1"
 managed-micronaut-mongo = "4.6.0"
 managed-micronaut-mqtt = "2.3.0"
 managed-micronaut-multitenancy = "4.2.0"
-managed-micronaut-neo4j = "5.2.0"
+managed-micronaut-neo4j = "6.0.0-SNAPSHOT"
 managed-micronaut-nats = "3.1.0"
 managed-micronaut-netflix = "2.1.0"
 managed-micronaut-object-storage = "1.1.0"
