use api scope for the moment

--- a/core-processor/build.gradle
+++ b/core-processor/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     api project(":aop")
     api libs.asm.tree
     api libs.bundles.asm
-    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.24.7'
+    api 'com.github.javaparser:javaparser-symbol-solver-core:3.24.7'
 
     compileOnly libs.kotlin.stdlib.jdk8
     compileOnly libs.managed.validation
