--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -79,7 +79,7 @@ managed-micronaut-coherence = "3.7.1"
 managed-micronaut-crac = "1.0.1"
 managed-micronaut-data = "3.8.1"
 managed-micronaut-discovery = "3.2.0"
-managed-micronaut-elasticsearch = "4.3.0"
+managed-micronaut-elasticsearch = "5.0.0-SNAPSHOT"
 managed-micronaut-email = "2.0.0-SNAPSHOT"
 managed-micronaut-flyway = "5.4.1"
 managed-micronaut-gcp = "4.6.0"
