--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,7 +13,7 @@ micronautBuild {
 
 dependencies {
     compileOnly libs.managed.jakarta.annotation.api
-    compileOnly libs.managed.graal
+    compileOnly libs.graal
     compileOnly libs.kotlin.stdlib
 }
 
@@ -43,4 +43,3 @@ tasks.withType(JapicmpTask).configureEach {
        addViolationTransformer(RemovedPackages, [prefixes: ['io.micronaut.caffeine'], exact: []])
    }
 }
-
