--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,7 +44,8 @@ micronaut-grpc = "3.3.1"
 micronaut-groovy = "4.0.0-SNAPSHOT"
 micronaut-picocli = "4.3.0"
 micronaut-sql = "4.7.2"
-micronaut-test = "3.7.0"
+micronaut-test = "4.0.0-SNAPSHOT"
+micronaut-serde = "2.0.0-SNAPSHOT"
 micronaut-tracing = "4.4.0"
 micrometer = "1.9.5"
 neo4j-java-driver = "1.4.5"
@@ -210,6 +211,7 @@ logbook-netty = { module = "org.zalando:logbook-netty", version.ref = "logbook-n
 
 micronaut-docs = { module = "io.micronaut.docs:micronaut-docs-asciidoc-config-props", version.ref = "micronaut-docs" }
 micronaut-runtime-groovy = { module = "io.micronaut.groovy:micronaut-runtime-groovy", version.ref = "micronaut-groovy" }
+micronaut-serde-jackson = { module = "io.micronaut.serde:micronaut-serde-jackson", version.ref = "micronaut-serde" }
 micronaut-test-bom = { module = "io.micronaut.test:micronaut-test-bom", version.ref = "micronaut-test" }
 micronaut-test-core = { module = "io.micronaut.test:micronaut-test-core", version.ref = "micronaut-test" }
 micronaut-test-junit5 = { module = "io.micronaut.test:micronaut-test-junit5", version.ref = "micronaut-test" }
