--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
@@ -10,6 +10,18 @@ micronautBuild {
     enableProcessing = false
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
+
+configurations {
+    all {
+        // Use AOP from here, not from maven
+        exclude group: 'io.micronaut', module: 'micronaut-aop'
+    }
+}
+
 group = projectGroupId
 
 def micronautBuild = (ExtensionAware) project.extensions.getByName("micronautBuild")
