Fix test-suite-geb which can't work with Micronaut test 4

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
@@ -14,6 +14,16 @@ micronautBuild {
 
 group = projectGroupId
 
+configurations {
+    testCompileClasspath {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            if (details.requested.group == 'io.micronaut.test') {
+                details.useVersion libs.versions.geb.micronaut.test.get()
+                details.because "Geb doesn't work with Groovy 4"
+            }
+        }
+    }
+}
 def micronautBuild = (ExtensionAware) project.extensions.getByName("micronautBuild")
 def micronautCore = micronautBuild.extensions.create(MicronautCoreExtension, "core", DefaultMicronautCoreExtension, extensions.findByType(VersionCatalogsExtension))
 micronautCore.documented.convention(true)
