Forgot testRuntimeClasspath configuration

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
@@ -15,7 +15,7 @@ micronautBuild {
 group = projectGroupId
 
 configurations {
-    testCompileClasspath {
+    all {
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             if (details.requested.group == 'io.micronaut.test') {
                 details.useVersion libs.versions.geb.micronaut.test.get()
