--- a/inject-groovy/build.gradle
+++ b/inject-groovy/build.gradle
@@ -12,7 +12,9 @@ micronautBuild {
 dependencies {
     api project(":core-processor")
     api libs.managed.groovy
-//    testImplementation 'javax.validation:validation-api:1.1.0.Final'
+
+    testImplementation libs.micronaut.validation.processor
+    testImplementation libs.micronaut.validation
     testImplementation project(":context")
     testImplementation libs.javax.inject
     testImplementation libs.spotbugs
@@ -25,7 +27,6 @@ dependencies {
     testImplementation project(":jackson-databind")
     testImplementation project(":inject-test-utils")
     testImplementation project(":inject-groovy-test")
-    testImplementation project(":validation")
     testImplementation(libs.neo4j.bolt)
     testImplementation libs.managed.groovy.json
     testImplementation libs.blaze.persistence.core
