--- a/inject-java-test/build.gradle
+++ b/inject-java-test/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     testAnnotationProcessor project(":inject-java")
     testCompileOnly project(":inject-groovy")
+    testImplementation libs.micronaut.validation.processor
     testImplementation project(":jackson-databind")
     testImplementation libs.managed.validation
     testImplementation libs.javax.persistence
