--- a/settings.gradle
+++ b/settings.gradle
@@ -57,7 +57,7 @@ include "retry"
 include "router"
 include "runtime"
 include "runtime-osx"
-include "validation"
+include "session"
 include "websocket"
 
 // test suites
