--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 configurations {
-    all {
+    testRuntimeClasspath {
         // Use AOP from here, not from maven
         exclude group: 'io.micronaut', module: 'micronaut-aop'
     }
