Add logback as a managed dependency

--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -70,7 +70,7 @@ dependencies {
             classifier = Os.isArch("aarch64") ? "osx-aarch_64" : "osx-x86_64"
         }
     }
-    testImplementation libs.logback
+    testImplementation libs.managed.logback
 
     // Adding these for now since micronaut-test isnt resolving correctly ... probably need to upgrade gradle there too
     testImplementation libs.junit.jupiter.api
